--- a/pico/config/config.yml
+++ b/pico/config/config.yml
@@ -9,4 +9,5 @@ authorgithub: https://github.com/devankitjuneja
 authorlinkedin: https://www.linkedin.com/in/ankit-juneja-a16b5647
 authoremail: "mailto: ankitjuneja@gmx.com"
 copyright_year: 2020
-authorimage: /assets/img/Picture.jpg
+authorimage: /assets/img/Ankit.jpg
+authorimagealt: /assets/img/Ankit-alt.jpg
