--- a/pico/.cpanel.yml
+++ b/pico/.cpanel.yml
@@ -2,15 +2,15 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/a200807z/public_html/
-    - /bin/cp -R assets $DEPLOYPATH
-    - /bin/cp -R config $DEPLOYPATH
-    - /bin/cp -R content $DEPLOYPATH
-    - /bin/cp -R themes $DEPLOYPATH
-    - /bin/cp -R vendor $DEPLOYPATH
-    - /bin/cp -R .gitignore $DEPLOYPATH
-    - /bin/cp -R .htaccess $DEPLOYPATH
-    - /bin/cp -R composer.json $DEPLOYPATH
-    - /bin/cp -R composer.lock $DEPLOYPATH
-    - /bin/cp -R index.php $DEPLOYPATH
-    - /bin/cp -R LICENSE $DEPLOYPATH
-    - /bin/cp -R README.md $DEPLOYPATH
+    - /bin/cp -R pico/assets $DEPLOYPATH
+    - /bin/cp -R pico/config $DEPLOYPATH
+    - /bin/cp -R pico/content $DEPLOYPATH
+    - /bin/cp -R pico/themes $DEPLOYPATH
+    - /bin/cp -R pico/vendor $DEPLOYPATH
+    - /bin/cp -R pico/.gitignore $DEPLOYPATH
+    - /bin/cp -R pico/.htaccess $DEPLOYPATH
+    - /bin/cp -R pico/composer.json $DEPLOYPATH
+    - /bin/cp -R pico/composer.lock $DEPLOYPATH
+    - /bin/cp -R pico/index.php $DEPLOYPATH
+    - /bin/cp -R pico/LICENSE $DEPLOYPATH
+    - /bin/cp -R pico/README.md $DEPLOYPATH
