--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,11 +2,11 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/a200807z/public_html/
-    - /bin/cp -R pico/assets $DEPLOYPATH
-    - /bin/cp -R pico/config $DEPLOYPATH
-    - /bin/cp -R pico/content $DEPLOYPATH
-    - /bin/cp -R pico/themes $DEPLOYPATH
-    - /bin/cp -R pico/vendor $DEPLOYPATH
+    - /bin/cp -R pico/assets/ $DEPLOYPATH
+    - /bin/cp -R pico/config/ $DEPLOYPATH
+    - /bin/cp -R pico/content/ $DEPLOYPATH
+    - /bin/cp -R pico/themes/ $DEPLOYPATH
+    - /bin/cp -R pico/vendor/ $DEPLOYPATH
     - /bin/cp -R pico/.gitignore $DEPLOYPATH
     - /bin/cp -R pico/.htaccess $DEPLOYPATH
     - /bin/cp -R pico/composer.json $DEPLOYPATH
