--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -8,10 +8,10 @@ deployment:
     - /bin/cp -R pico/themes/ $DEPLOYPATH
     - /bin/cp -R pico/plugins/ $DEPLOYPATH
     - /bin/cp -R pico/vendor/ $DEPLOYPATH
-    - /bin/cp -R pico/.gitignore $DEPLOYPATH
-    - /bin/cp -R pico/.htaccess $DEPLOYPATH
-    - /bin/cp -R pico/composer.json $DEPLOYPATH
-    - /bin/cp -R pico/composer.lock $DEPLOYPATH
-    - /bin/cp -R pico/index.php $DEPLOYPATH
-    - /bin/cp -R pico/LICENSE $DEPLOYPATH
-    - /bin/cp -R pico/README.md $DEPLOYPATH
+    - /bin/cp pico/composer.json $DEPLOYPATH
+    - /bin/cp pico/composer.lock $DEPLOYPATH
+    - /bin/cp pico/index.php $DEPLOYPATH
+    - /bin/cp pico/LICENSE $DEPLOYPATH
+    - /bin/cp pico/README.md $DEPLOYPATH
+    - /bin/cp pico/.gitignore $DEPLOYPATH
+    - /bin/cp pico/.htaccess $DEPLOYPATH
