--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,16 +2,5 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/a200807z/public_html/
-    - /bin/cp -R pico/assets/ $DEPLOYPATH
-    - /bin/cp -R pico/config/ $DEPLOYPATH
-    - /bin/cp -R pico/content/ $DEPLOYPATH
-    - /bin/cp -R pico/themes/ $DEPLOYPATH
-    - /bin/cp -R pico/plugins/ $DEPLOYPATH
-    - /bin/cp -R pico/vendor/ $DEPLOYPATH
-    - /bin/cp pico/composer.json $DEPLOYPATH
-    - /bin/cp pico/composer.lock $DEPLOYPATH
-    - /bin/cp pico/index.php $DEPLOYPATH
-    - /bin/cp pico/LICENSE $DEPLOYPATH
-    - /bin/cp pico/README.md $DEPLOYPATH
-    - /bin/cp pico/.gitignore $DEPLOYPATH
-    - /bin/cp pico/.htaccess $DEPLOYPATH
+    - /bin/cp -R pico/* $DEPLOYPATH
+    
